--- a/home/css/works.css
+++ b/home/css/works.css
@@ -34,7 +34,7 @@
     background: linear-gradient(180deg, #1A1A1A -26.18%, rgba(26, 26, 26, 0) 59.52%);
     padding: 50px;
     width: calc((100% - 30px) /2 );
-    border: 1px solid;
+    border: 1px solid transparent;
     border-image-source: linear-gradient(180deg, #1F1F1F 0%, rgba(31, 31, 31, 0) 100%);
     border-radius: 20px;
 }
